v1.11.2/deployment/ingress/web-nginx.yaml
---
# service
#
apiVersion: v1
kind: Service
metadata:
  labels:
    run: web-nginx
  name: web-nginx-x
  namespace: ingress-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: web-nginx
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: web-nginx
  name: web-nginx-y
  namespace: ingress-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: web-nginx
  type: NodePort

---
# deployment
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: web-nginx
  name: web-nginx
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      run: web-nginx
  template:
    metadata:
      labels:
        run: web-nginx
    spec:
      volumes:
      - name: www-data
        persistentVolumeClaim:
          claimName: claim-data
      - name: www-conf
        persistentVolumeClaim:
          claimName: claim-conf
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: web-nginx
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: www-data
        - mountPath: "/etc/nginx/conf.d"
          name: www-conf
      restartPolicy: Always

---
