v1.11.2/deployment/ingress/web-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-nginx-ingress
  namespace: ingress-nginx
spec:
  rules:
  - host: foo.baz.com
    http:
      paths:
      - path: /foo/index.html
        backend:
          serviceName: web-nginx-x
          servicePort: 80
  - host: bar.baz.com
    http:
      paths:
      - path: /bar/index.html
        backend:
          serviceName: web-nginx-y
          servicePort: 80
#      - path: /foo
#        backend:
#          serviceName: web-nginx-x
#          servicePort: 80
